2005-08-18  Jan Hubicka  <jh@suse.cz>

	PR c++/22034
	* cgraphunit.c (cgraph_varpool_assemble_pending_decls): Emit debug
	info only for local statics, not for member variables.

2005-08-18  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	* tree-data-ref.c (analyze_siv_subscript_cst_affine): Fix comment typo.

2005-08-18  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	* c-typeck.c (designator_errorneous): Rename to designator_erroneous.

2005-08-18  Andrew Pinski  <pinskia@physics.uc.edu>

	PR middle-end/16045
	* builtins.c (fold_builtin): Create a new NOP_EXPR all the time.

2005-08-17  James E Wilson  <wilson@specifix.com>

	* c-decl.c (grokdeclarator): Use TYPE_SIZE_UNIT not TYPE_SIZE in
	array size check.

2005-08-17  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/rs6000.md (leu<mode>): Convert to mode macro.
	(leu<mode>_compare): Same.
	(plus_leu<mode>): Same.
	(neg_leu<mode>): Same.
	(and_neg_leu<mode): Same.
	(ltu<mode>_compare): Same.
	(plus_ltu<mode>): Same.
	(geu<mode>): Same.
	(geu<mode>_compare): Same.
	(plus_geu<mode>): Same.
	(neg_geu<mode>): Same.
	(and_neg_geu<mode>): Same.
	(plus_gt<mode>): Same.
	(gtu<mode>_compare): Same.
	(plus_gtu<mode>): Same.

2005-08-17  Erik Christiansen  <erik@dd.nec.com.au>
	
	* config/v850/lib1funcs.asm (callt_save_interrupt): Fix comment typos.
	Move call_table_data to end.  Delete spurious .text.
	(callt_save_all_interrupt): Fix comment typo.

2005-08-17  James E Wilson  <wilson@specifix.com>
	    Kevin Winchester  <winchester@amirix.com>

	PR target/21684
	* config/mcore/mcore.h (SHIFT_COUNT_TRUNCATED): Define to 0.

2005-08-17  Uros Bizjak  <uros@kss-loka.si>

	PR target/23268
	* config/i386/i386.md ("*fist<mode>2_1"): New pattern.
	("lrint<mode>2"): Change expander to use "*fist<mode>2_1" pattern.

2005-08-17  J"orn Rennecke <joern.rennecke@st.com>

	* varasm.c (decode_reg_name): Skip empty additional register names.

2005-08-16  Zdenek Dvorak  <dvorakz@suse.cz>
