@@ -1,3 +1,8 @@
+2005-08-18  Dorit Nuzman  <dorit@il.ibm.com>
+
+	PR tree-optimization/22228
+	* g++.dg/vect/pr22543.cc: New test.
+
 2005-08-17  Steven Bosscher  <stevenb@suse.de>
 
 	PR tree-optimization/21574
